# vctrs

./: .gitignore  Cargo.toml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release-npm.yml  release.yml
benchmarks/: bench.py  bench_quantized.py  recall.py
docs/: index.md
docs/examples/: dedup.md  rag.md  semantic-search.md
docs/node/: api.md  index.md
docs/node/typedoc/: Class.VctrsDatabase.md  Interface.GetResult.md  Interface.SearchResult.md  Interface.VctrsStats.md  README.md  TypeAlias.WhereFilter.md
docs/python/: api.md  index.md
docs/wasm/: demo.html  demo.md  index.md
examples/dedup/: dedup.py  dedup.ts
examples/rag/: rag.py  rag.ts
examples/semantic-search/: search.py  search.ts
node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  test.mjs  typedoc.json
node/src/: lib.rs
python/vctrs/: __init__.py  __init__.pyi  _vctrs.pyi
src/: db.rs  hnsw.rs  lib.rs  storage.rs
tests/: test_basic.py
vctrs-core/: Cargo.toml  build.rs
vctrs-core/benches/: bench.rs
vctrs-core/src/: client.rs  db.rs  db_tests.rs  distance.rs  error.rs  export.rs  filter.rs  hnsw.rs  hnsw_tests.rs  lib.rs  quantize.rs  storage.rs  wal.rs
vctrs-core/src/hnsw/: candidates.rs  io.rs  mod.rs  storage.rs
vctrs-server/: Cargo.toml
vctrs-server/src/: main.rs
wasm/: Cargo.toml  README.md  demo.html  test.html
wasm/src/: lib.rs
