[workspace]
members = [".", "vctrs-core", "node", "wasm"]
resolver = "2"

[package]
name = "vctrs"
version = "0.2.2"
edition = "2021"
description = "A fast embedded vector database with Python bindings"

[lib]
name = "vctrs"
crate-type = ["cdylib", "rlib"]

[dependencies]
vctrs-core = { path = "vctrs-core" }
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
