[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "vctrs"
version = "0.2.3"
description = "A fast embedded vector database. Rust core, Python API. 4-10x faster than ChromaDB."
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Stephen Yang"}]
keywords = ["vector", "database", "embeddings", "hnsw", "similarity-search", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
readme = "README.md"

[project.urls]
Repository = "https://github.com/yang-29/vctrs"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "vctrs._vctrs"
