[package]
name = "vctrs-node"
version = "0.1.4"
edition = "2021"
description = "Node.js bindings for vctrs embedded vector database"

[lib]
crate-type = ["cdylib"]

[dependencies]
vctrs-core = { path = "../vctrs-core" }
napi = { version = "2", features = ["napi6", "serde-json"] }
napi-derive = "2"
serde_json = "1"

[build-dependencies]
napi-build = "2"
