[package]
name = "vctrs-core"
version = "0.2.2"
edition = "2021"
description = "Core library for vctrs embedded vector database"

[lib]
name = "vctrs_core"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
parking_lot = "0.12"
byteorder = "1"
simsimd = "6"
rayon = "1"
memmap2 = "0.9"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(has_blas)'] }

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
tempfile = "3"
