[package]
name = "vctrs-wasm"
version = "0.2.3"
edition = "2021"
description = "vctrs vector database for WebAssembly"

[lib]
crate-type = ["cdylib"]

[dependencies]
vctrs-core = { path = "../vctrs-core", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
lto = true
opt-level = "s"
